--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/MateoMarco/Impresiones-3D" target= "_blank" class="link">3D Printing Business</a></h3>
-										<p>Stock, inventory and sales management</p>
+										<p>Orders, inventory and sales management</p>
 									</header>
 								</article>
-								<article>
+								<article style="width: 100%;" >
 									<span class="image">
 										<img src="images/ShortestPath.png" alt="" />
 									</span>
@@ -131,7 +131,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
+								<form method="post" action="https://formsubmit.co/mateomarco.gon@gmail.com">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
