--- a/index.html
+++ b/index.html
@@ -114,13 +114,14 @@
 									<header class="major">
 										<h2>About Me</h2>
 									</header>
-									<p>Currently on my forth year in college, I am looking for new challenges that will help me develop professionally,
-										as well as personally. I look forward to bring the skills I have learned.<br />
-										I find myself as proactive, enthusiast, and always willing to learn.<br />
+									<p>Currently on my forth year in college, I am a proactive, enthusiastic and methodical person,
+										open to new challenges that will help me develop both professionally and personally.  <br />
+										I look forward to working within an enviroment where I can provide my set of skills to learn while working
+										as a team. <br />
 										If you want to know more about me, you can find my resume just below!
 									</p>
 									<ul class="actions">
-										<li><a href="CV - Mateo Marco.pdf" target="_blank" class="button icon solid fa-download">CV</a></li>
+										<li><a href="documents/CV - Mateo Marco.pdf" target="_blank" class="button icon solid fa-download">CV</a></li>
 									</ul>
 								</div>
 							</section>
