--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								<h1>Hi, my name is Mateo Marco</h1>
 							</header>
 							<div class="content">
-								<p>I am an Industrial Engineering student at <a href="https://www.fi.uba.ar/">Universidad de Buenos Aires</a><br />
+								<p>I am an Industrial Engineering student at <a href="https://www.fi.uba.ar/"target= "_blank">Universidad de Buenos Aires</a><br />
 								from Buenos Aires, Argentina.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">My projects</a></li>
