--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 									<header class="major">
 										<h2>About Me</h2>
 									</header>
-									<p>Currently on my forth year in college, I am a proactive, enthusiastic and methodical person,
+									<p>Currently on my fourth year in college, I am a proactive, enthusiastic and methodical person,
 										open to new challenges that will help me develop both professionally and personally.  <br />
-										I look forward to working within an enviroment where I can provide my set of skills to learn while working
+										I look forward to working within an environment where I can provide my set of skills to learn while working
 										as a team. <br />
 										If you want to know more about me, you can find my resume just below!
 									</p>
