--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 										If you want to know more about me, you can find my resume just below!
 									</p>
 									<ul class="actions">
-										<li><a href="documents/CV - Mateo Marco (English).pdf" target="_blank" class="button icon solid fa-download">CV</a></li>
+										<li><a href="documents/Resume - Mateo Marco.pdf" target="_blank" class="button icon solid fa-download">CV</a></li>
 									</ul>
 								</div>
 							</section>
