--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 									<header class="major">
 										<h2>About Me</h2>
 									</header>
-									<p>Currently on my fourth year in college, I am a proactive, enthusiastic and methodical person,
+									<p>Currently on my fifth year in college, I am a proactive, enthusiastic and methodical person,
 										open to new challenges that will help me develop both professionally and personally.  <br />
 										I look forward to working within an environment where I can provide my set of skills to learn while working
 										as a team. <br />
